# gopro-upload

./: .gitignore  LICENSE  PLAN.md  README.md  config.example.yaml  cookies.txt.example  credentials.json.example  extract_gopro_cookie.py  pyproject.toml
src/gopro_upload/: __init__.py  cli.py  config.py  db.py  drive_setup.py  inventory.py  transfer.py  verify.py
src/gopro_upload/drive/: __init__.py  auth.py  client.py
src/gopro_upload/gopro/: __init__.py  auth.py  client.py
