[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopro-upload"
version = "0.1.0"
description = "Migrate GoPro Plus cloud media to Google Drive with resumable chunked transfer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "rich>=13.0.0",
]

[project.scripts]
gopro-upload = "gopro_upload.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gopro_upload"]

[tool.hatch.build]
sources = ["src"]
